--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client"
-  },
+"scripts": {
+  "start": "node server.js",
+  "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client && cp -r ../client/dist ./client/dist"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
