--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
 "scripts": {
   "start": "node server.js",
-  "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client && cp -r ../client/dist ./client/dist"
+  "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client"
 },
   "keywords": [],
   "author": "",
